static_library("audio") {
    sources = [
        "audio_commentator.cc",
        "audio_commentator.h",
        "audio_server.cc",
        "audio_server.h",
    ]

    deps = [
        "//src/core",
        "//src/core/server",
        "//third_party/glog",
        "//third_party/gtest:prod",
    ]
}

# executable("audio_tester") {
#     sources = [
#         "audio_tester.cc",
#     ]
# 
#     deps = [
#         ":audio",
#     ]
# }
