static_library("base") {
    sources = [
        "executor.cc",
        "file/file.cc",
        "file/path.cc",
        "time.cc",
        "time_stamp_counter.cc",
        "strings.cc",
        "wait_group.cc",
    ]

    public_deps = [
        "//third_party/glog",
        "//third_party/gflags",
    ]
}

executable("blocking_queue_test") {
    testonly = true
    sources = [
        "blocking_queue_test.cc",
    ]
    deps = [
        ":base",
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
    ]
}

executable("bmi_test") {
    testonly = true
    sources = [
        "bmi_test.cc",
    ]
    deps = [
        ":base",
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
    ]
}

executable("sse_test") {
    testonly = true
    sources = [
        "sse_test.cc",
    ]
    deps = [
        ":base",
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
    ]
}

executable("strings_test") {
    testonly = true
    sources = [
        "strings_test.cc",
    ]
    deps = [
        ":base",
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
    ]
}

executable("small_int_set_test") {
    testonly = true
    sources = [
        "small_int_set_test.cc",
    ]
    deps = [
        ":base",
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
    ]
}

executable("file_path_test") {
    testonly = true
    sources = [
        "file/path_test.cc",
    ]
    deps = [
        ":base",
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
    ]
}
