# TODO(mayah): Update ac_analyzer.cc not to use deprecated APIs.
# add_compile_options("-Wno-deprecated-declarations")

if (use_usb) {
    static_library("usb_device") {
        sources = [
            "usb_device.cc",
            "usb_device.h",
        ]
    }
}

static_library("capture") {
    sources = [
        "ac_analyzer.cc",
        "ac_analyzer.h",
        "analyzer.cc",
        "analyzer.h",
        "analyzer_result_drawer.cc",
        "analyzer_result_drawer.h",
        "capture.cc",
        "capture.h",
        "color.cc",
        "color.h",
        "images_source.cc",
        "images_source.h",
        "movie_source.cc",
        "movie_source.h",
        "movie_source_key_listener.cc",
        "movie_source_key_listener.h",
        "real_color_field.cc",
        "real_color_field.h",
        "source.cc",
        "source.h",
    ]

    cflags = [
        "-Wno-deprecated-declarations",
    ]

    deps = [
        "//src/core",
        "//src/gui",
        "//third_party/gflags",
        "//src/capture/recognition",
    ]

    configs += [
        "//build/config:with_sdl2",
    ]

    if (use_usb) {
        sources += [
            "syntek_source.cc",
            "syntek_source.h",
        ]

        deps += [
            ":usb_device",
            "//src/capture/driver",
        ]

        configs += [
            "//build/config:with_usb",
        ]
    }
}

# if(V4L2_LIBRARY)
#     add_compile_options("-DUSE_V4L2")
#     add_library(puyoai_capture_viddev viddev_source.cc)
# endif()


# capture_add_test(ac_analyzer_test)
# capture_add_test(color_test)
# capture_add_test(real_color_field_test)
