# cmake_minimum_required(VERSION 2.8)

# add_subdirectory(client)
# add_subdirectory(connector)
# add_subdirectory(pattern)
# add_subdirectory(plan)
# add_subdirectory(probability)
# add_subdirectory(rensa)
# add_subdirectory(rensa_tracker)
# add_subdirectory(server)

# ----------------------------------------------------------------------
# library

static_library("core") {
    sources = [
        "bit_field.cc",
        "bit_field.h",
        "column_puyo_list.cc",
        "column_puyo_list.h",
        "core_field.cc",
        "core_field.h",
        "decision.cc",
        "decision.h",
        "field_bits.cc",
        "field_bits.h",
        "field_bits_256.cc",
        "field_bits_256.h",
        "field_pretty_printer.cc",
        "field_pretty_printer.h",
        "flags.cc",
        "frame_request.cc",
        "frame_request.h",
        "frame_response.cc",
        "frame_response.h",
        "game_result.cc",
        "game_result.h",
        "key.cc",
        "key.h",
        "key_set.cc",
        "key_set.h",
        "key_set_seq.cc",
        "key_set_seq.h",
        "kumipuyo.cc",
        "kumipuyo.h",
        "kumipuyo_moving_state.cc",
        "kumipuyo_moving_state.h",
        "kumipuyo_pos.cc",
        "kumipuyo_pos.h",
        "kumipuyo_seq.cc",
        "kumipuyo_seq.h",
        "kumipuyo_seq_generator.cc",
        "kumipuyo_seq_generator.h",
        "plain_field.cc",
        "plain_field.h",
        "puyo_color.cc",
        "puyo_color.h",
        "puyo_controller.cc",
        "puyo_controller.h",
        "real_color.cc",
        "real_color.h",
        "user_event.cc",
        "user_event.h",
    ]

    public_deps = [
        "//src/base",
        "//third_party/glog",
        "//third_party/gflags",
    ]
}

# ----------------------------------------------------------------------
# tests

executable("bit_field_test") {
    testonly = true
    sources = [
        "bit_field_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("column_puyo_list_test") {
    testonly = true
    sources = [
        "column_puyo_list_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("core_field_test") {
    testonly = true
    sources = [
        "core_field_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("decision_test") {
    testonly = true
    sources = [
        "decision_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("field_bits_test") {
    testonly = true
    sources = [
        "field_bits_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("field_bits_256_test") {
    testonly = true
    sources = [
        "field_bits_256_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("field_checker_test") {
    testonly = true
    sources = [
        "field_checker_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("frame_response_test") {
    testonly = true
    sources = [
        "frame_response_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("frame_request_test") {
    testonly = true
    sources = [
        "frame_request_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("key_set_test") {
    testonly = true
    sources = [
        "key_set_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("key_set_seq_test") {
    testonly = true
    sources = [
        "key_set_seq_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("kumipuyo_test") {
    testonly = true
    sources = [
        "kumipuyo_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("kumipuyo_moving_state_test") {
    testonly = true
    sources = [
        "kumipuyo_moving_state_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("kumipuyo_pos_test") {
    testonly = true
    sources = [
        "kumipuyo_pos_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("kumipuyo_seq_test") {
    testonly = true
    sources = [
        "kumipuyo_seq_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("kumipuyo_seq_generator_test") {
    testonly = true
    sources = [
        "kumipuyo_seq_generator_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("plain_field_test") {
    testonly = true
    sources = [
        "plain_field_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("player_state_test") {
    testonly = true
    sources = [
        "player_state_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("puyo_color_test") {
    testonly = true
    sources = [
        "puyo_color_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("puyo_controller_test") {
    testonly = true
    sources = [
        "puyo_controller_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("rensa_result_test") {
    testonly = true
    sources = [
        "rensa_result_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("bit_field_perftest") {
    testonly = true
    sources = [
        "bit_field_performance_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("field_perftest") {
    testonly = true
    sources = [
        "field_performance_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}

executable("puyo_controller_perftest") {
    testonly = true
    sources = [
        "puyo_controller_performance_test.cc",
    ]
    deps = [
        "//third_party/gtest",
        "//third_party/gtest:gtest_main",
        "//third_party/glog",
        ":core",
        "//src/base",
    ]
}
