group("cpu") {
    deps = [
        "//src/cpu/colun",
        "//src/cpu/control_tester",
        "//src/cpu/hamaji",
        "//src/cpu/inosendo",
        "//src/cpu/kantoku",
        "//src/cpu/mayah",
        "//src/cpu/munetoshi",
        "//src/cpu/peria",
        "//src/cpu/ryumas",
        "//src/cpu/sample",
        "//src/cpu/sample_beam",
        "//src/cpu/sample_rensa",
        "//src/cpu/sample_suicide",
        "//src/cpu/takapt",
        "//src/cpu/test_lockit",
        "//src/cpu/tzik",
        "//src/cpu/yamaguchi",
        "//src/cpu/yuricat",
    ]
}
